@@ -1155,7 +1155,9 @@ static SyscallTableEntry syscall_table[] = {
    LINXY(__NR_clock_adjtime,     sys_clock_adjtime),    // 347
 
    LINXY(__NR_process_vm_readv,  sys_process_vm_readv), // 351
-   LINX_(__NR_process_vm_writev, sys_process_vm_writev) // 352
+   LINX_(__NR_process_vm_writev, sys_process_vm_writev),// 352
+
+   LINXY(__NR_getrandom,         sys_getrandom)         // 359
 };
 
 SyscallTableEntry* ML_(get_linux_syscall_entry) ( UInt sysno )
